Use inline-blocks instead of floats.

--- a/media/css/global.css
+++ b/media/css/global.css
@@ -32,8 +32,8 @@ font-weight:bold;
 padding-left:0;
 }
 .photo_list li {
-display:inline;
-float:left;
+display:inline-block;
+vertical-align:top;
 height:150px;
 margin:10px;
 padding-top:10px;
