--- a/media/css/global.css
+++ b/media/css/global.css
@@ -195,7 +195,7 @@ table#change-history tbody th { width:16em; }
 .menu li { list-style:none; border-top: 1px solid #777; padding: 20px 0; margin: 0; }
 .menu li:active { border: 1px solid #000; }
 .photo_container { border:none; }
-.photo_block { border:none; min-height:none; margin:0; }
+.photo_block { border:none; min-height:0; margin:0; }
 .photo_detail_photo { padding:0; }
 #header { display:none; }
 .breadcrumbs { display:none; }
