--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -52,7 +52,7 @@
     {% for place in object.children.all %}
         <li class='photo_list_item' onclick='parent.location="{% get_view_url place %}"'>
             <a href="{% get_view_url place %}">
-                {% with place.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo default_list_size %}' alt=''/><br/>{% endif %}{% endwith %}
+                {% with place.get_cover_photo as photo %}{% if photo %}<img src='{% get_photo_thumb_url photo default_list_size %}' alt=''/><br/>{% endif %}{% endwith %}
                 <div class='title'>{{ place }}</div>
             </a>
         </li>
