--- a/media/css/global.css
+++ b/media/css/global.css
@@ -1,5 +1,8 @@
 body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif; color:#333; background:#fff; }
 
+.ui-autocomplete-input { width: 320px; }
+.ui-corner-all img { width: 100px; padding-right: 5px; }
+
 .photo_ { }
 .photo_D { background:#EEDDDD; color:#333333; }
 .photo_R { background:#DDDDEE; color:#333333; }
