Add command to update action field for photo(s).

--- a/spud/templates/spud/show_update_form.html
+++ b/spud/templates/spud/show_update_form.html
@@ -11,6 +11,7 @@
 <option>delete person</option>
 <option>delete album</option>
 <option>delete category</option>
+<option>set action</option>
 <option>set place</option>
 <option>set person</option>
 <option>set photographer</option>
